fix: remove blue highlight of button on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -91,6 +91,8 @@ body {
   outline: none;
   border: none;
   border-radius: 0;
+  box-shadow: none;
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
 
   &-undo {
     background-color: $color-black;
